test/errors/compatibility_error/zs/wrong_compatibility_version_format_error.zs
package wrong_compatibility_version_format_error;

zserio_compatibility_version("2.5.0-rc1"); // zserio uses *-pre1 instead of *-rc1
